<resources>
    <string name="app_name">Techno Drugs Ltd.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- All text Dummy-->
    <string name="orderEntry">Order Entry</string>
    <string name="customerEntry">Customer Entry</string>
    <string name="customerList">Customer List</string>
    <string name="orderStatus">Order/Invoice Status</string>
    <string name="loginTitle">LOGIN</string>
    <string name="loginPassword">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_pass">Current Password</string>
    <string name="submit">SUBMIT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="customer">Customer:</string>
    <string name="customerName">Customer Name</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="orderDate">Order Date</string>
    <string name="deliveryDate">Delivery Date</string>
    <string name="paymentMode">Payment Mode</string>
    <string name="orderRef">Order Ref.</string>
    <string name="productName">Product Name</string>
    <string name="orderItems">Order Items</string>
    <string name="totalOrderItems">No of order Items:</string>
    <string name="pack">Pack</string>
    <string name="tradePrice">Trade Price</string>
    <string name="quantity">Quantity</string>
    <string name="netAmount">Net Amount</string>
    <string name="add">Add</string>
    <string name="orderList">Order List</string>
    <string name="action">Action</string>
    <string name="tradeValue">Trade Value</string>
    <string name="VatValue">Vat Value</string>
    <string name="disValue">Dis Value</string>
    <string name="netValue">Net Value</string>
    <string name="careOf">Care of</string>
    <string name="customerType">Customer Type</string>
    <string name="territory">Territory</string>
    <string name="market">Market</string>
    <string name="houseName">House Name</string>
    <string name="holdingNo">Holding No</string>
    <string name="roadNo">Road No</string>
    <string name="roadName">Road Name</string>
    <string name="blockNo">Block No</string>
    <string name="sector">Sector</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="orderNo">Order No</string>
    <string name="orderAmount">Order Amount</string>
    <string name="invoiceNo">Invoice No</string>
    <string name="invoiceDate">Invoice Date</string>
    <string name="invoiceAmount">Invoice Amount</string>
    <string name="invoiceQuantity">Invoice Quantity</string>
    <string name="contactinfoDetailes">Software Technology Park (12th Floor),\nKawran Bazar,\nDhaka, Bangladesh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">There is a newer version of this application available, Click OK to upgrade now!</string>
    <string name="dialog_title">Update!</string>
</resources>
