<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    >
    <!-- Header Level-->
    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_card_style1"
        android:elevation="15dp">
        <!--from & to date entry label-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/textViewStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="@dimen/textSize12sp"
                    android:textColor="@color/textColorTitleLarge"
                    android:gravity="left"
                    android:layout_marginLeft="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_style2"
                    android:layout_marginTop="4dp">
                    <EditText
                        android:id="@+id/editTextStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center|left"
                        android:textSize="@dimen/textSize11sp"
                        android:editable="false"
                        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                        android:textColor="@color/textColorTitleSmall"
                        android:textColorHint="@color/textColorTitleSmall"
                        android:backgroundTint="@android:color/transparent"
                        android:background="@color/textColorTitleLarge"
                        android:drawableTint="@color/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="7dp"
                android:layout_height="5dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="@dimen/textSize12sp"
                    android:textColor="@color/textColorTitleLarge"
                    android:gravity="left"
                    android:layout_marginLeft="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_style2"
                    android:layout_marginTop="4dp">
                    <EditText
                        android:id="@+id/editTextEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center|left"
                        android:textSize="@dimen/textSize11sp"
                        android:editable="false"
                        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                        android:textColor="@color/textColorTitleSmall"
                        android:textColorHint="@color/textColorTitleSmall"
                        android:backgroundTint="@android:color/transparent"
                        android:background="@color/md_red_900"
                        android:drawableTint="@color/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="7dp"
                android:layout_height="5dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center|left"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/buttonSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_style"
                    android:textSize="12sp"
                    android:text="@string/search"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <!--Layout View1-->
    <HorizontalScrollView
        android:id="@+id/horizontalView"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/relativeHeader"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/box_style"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="0dp"
            android:gravity="center">
            <!--1st label-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_marginRight="11dp"
                android:layout_marginLeft="11dp">
                <!--1-->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_black">
                    <TextView
                        android:id="@+id/textViewOrderNoTitle"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/textSize12sp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:text="@string/orderNo"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <!--2-->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_black"
                    android:layout_marginLeft=".5dp">
                    <TextView
                        android:id="@+id/textViewCustomerNameTitle"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/textSize12sp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:text="@string/customerName"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <!--3-->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_black"
                    android:layout_marginLeft=".5dp">
                    <TextView
                        android:id="@+id/textViewOrderAmountTitle"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/textSize12sp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:text="@string/orderAmount"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <!--4-->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_black"
                    android:layout_marginLeft=".5dp">
                    <TextView
                        android:id="@+id/textViewInvoiceNoTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center|left"
                        android:gravity="center"
                        android:textSize="@dimen/textSize12sp"
                        android:text="@string/invoiceNo"
                        android:textStyle="bold"
                        android:paddingLeft="0dp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <!--5-->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_black"
                    android:layout_marginLeft=".5dp">
                    <TextView
                        android:id="@+id/textViewInvoiceDateTitle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center|left"
                        android:gravity="center"
                        android:textSize="@dimen/textSize12sp"
                        android:text="@string/invoiceDate"
                        android:textStyle="bold"
                        android:paddingLeft="0dp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <!--6-->
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:background="@drawable/small_card_black"
                    android:layout_marginLeft=".5dp">
                    <TextView
                        android:id="@+id/textViewInvoiceAmountTitle"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="@dimen/textSize12sp"
                        android:paddingLeft="2dp"
                        android:textStyle="bold"
                        android:text="@string/invoiceAmount"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recylcerViewOrderStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="745dp"
                tools:layout_editor_absoluteY="-51dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>