<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    tools:context="com.csi.technodrugs.Activity.ActivitySetting"
    >

    <include layout="@layout/toolbar"/>
    <!--Layout edit-->
    <LinearLayout
        android:id="@+id/layoutEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/red_box_style"
        android:layout_below="@+id/logo"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="40dp"
        android:elevation="15dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/account_card_style1"
            android:layout_below="@+id/logo"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:elevation="0dp"
            android:layout_centerInParent="true">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_gravity="center|left"
                        android:textSize="@dimen/textSize14sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingLeft="15dp"
                        android:text="@string/change_password"
                        android:layout_marginTop="11dp"/>
                    <!--2nd label-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="23dp"
                        android:orientation="horizontal"
                        android:layout_marginRight="11dp"
                        android:layout_marginLeft="11dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".7"
                            android:layout_gravity="center|left"
                            android:background="@drawable/small_card_style">
                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="wrap_content"
                                android:layout_height="18dp"
                                android:layout_gravity="center|left"
                                android:textSize="@dimen/textSize12sp"
                                android:paddingLeft="15dp"
                                android:text="@string/old_pass" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center|left"
                            android:background="@drawable/small_card_style2">
                            <EditText
                                android:id="@+id/editTextOldPassword"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_gravity="center|left"
                                android:textSize="@dimen/textSize12sp"
                                android:gravity="center"
                                android:inputType="textPassword"
                                android:paddingLeft="0dp"
                                android:paddingRight="5dp"
                                android:hint="****"
                                android:background="@android:color/transparent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <!--3rd label-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:layout_marginRight="11dp"
                        android:layout_marginLeft="11dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".7"
                            android:layout_gravity="center|left"
                            android:background="@drawable/small_card_style">
                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="18dp"
                                android:layout_gravity="center|left"
                                android:textSize="@dimen/textSize12sp"
                                android:paddingLeft="15dp"
                                android:text="@string/new_password" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center|left"
                            android:background="@drawable/small_card_style2">
                            <EditText
                                android:id="@+id/editTextNewPassword"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_gravity="center|left"
                                android:textSize="@dimen/textSize12sp"
                                android:gravity="center"
                                android:inputType="textPassword"
                                android:paddingLeft="0dp"
                                android:paddingRight="5dp"
                                android:hint="****"
                                android:background="@android:color/transparent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <!--4th label-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:layout_marginRight="11dp"
                        android:layout_marginLeft="11dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".7"
                            android:layout_gravity="center|left"
                            android:background="@drawable/small_card_style">
                            <TextView
                                android:id="@+id/textView27"
                                android:layout_width="wrap_content"
                                android:layout_height="18dp"
                                android:layout_gravity="center|left"
                                android:textSize="@dimen/textSize12sp"
                                android:paddingLeft="15dp"
                                android:text="@string/confirm_password" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center|left"
                            android:background="@drawable/small_card_style2">
                            <EditText
                                android:id="@+id/editTextConfirmPassword"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_gravity="center|left"
                                android:textSize="@dimen/textSize12sp"
                                android:gravity="center"
                                android:paddingLeft="0dp"
                                android:paddingRight="5dp"
                                android:hint="****"
                                android:inputType="textPassword"
                                android:background="@android:color/transparent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <!--Submit Button-->
                    <Button
                        android:id="@+id/buttonSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/login_button_style"
                        android:textSize="@dimen/textSize14sp"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:layout_marginRight="50dp"
                        android:layout_marginLeft="50dp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
